# spatial-cimo

./: .gitignore  LICENSE.md  README.md  conceptual-model.md  spatialos.json
doc/: conceptual-activity-model-desires.md  conceptual-activity-model.md  conceptual-model.md
notebooks/: .gitignore  select-test-building-set.ipynb
schema/eeci/building/: hvac.schema  temperature.schema  traits.schema
workers/gsim/src/main/resources/: test_building_selection.csv
workers/gsim/src/main/scala/eeci/apps/: BuildingSpawner.scala
workers/gsim/src/main/scala/eeci/behaviours/: PropagateHvacBehaviour.scala  PropagateTemperatureBehaviour.scala
workers/gsim/src/main/scala/eeci/launch/bridgesettings/: ThimBridgeSettings.scala
workers/gsim/src/main/scala/eeci/natures/: Building.scala
workers/gsim/src/main/scala/eeci/util/: ThermalEngineConstraint.scala
workers/gsim/src/main/scala/improbable/launcher/: SimulationLaunchConfig.scala  SpatialOSLauncher.scala
workers/thim/: .gitignore  CMakeLists.txt  build.json  generate.sh  spatialos_worker.json  thim.cc
workers/unity/: .gitignore  spatialos_worker.json.backup
workers/unity/Assets/: ClientScene.unity
workers/unity/ProjectSettings/: ProjectSettings.asset
